# Everyone-is-John

./: .gitignore  Cargo.toml  README.md  index.html  justfile
.github/workflows/: rust.yml
assets/: eij.typ  rules.md
examples/: attributes.rs
src/: dice.rs  eij.rs  lib.rs  main.rs  window.rs
