[package]
name = "EiJ-Tracker"
version = "0.1.0"
edition = "2024"

[features]
wasm = ["iced/web-colors", "iced/webgl"]

[dependencies]
derive_setters = "0.1.9"
iced = { version = "0.14.0", features = ["advanced", "debug"] }
iced_aw = "0.13.1"
num = "0.4.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
